[package]
name = "gh-reply"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization at the cost of compilation time
strip = true        # Strip symbols from binary
